fix: scrollbar colors

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -58,18 +58,15 @@ main {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-  &:active {
-    background-color: #e1e1e1;
-  }
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #bbb;
+  background-color: #9993;
   border-radius: 6px;
 
   &:hover {
-    background: #999;
+    background-color: #9999;
   }
   &:active {
     background-color: #777;
